Use ArrayDeque and warn when logger interval < 2